Fixing "Misplaced error message" on ie browser #1453

--- a/datawinners/media/css/scss/section_registration.scss
+++ b/datawinners/media/css/scss/section_registration.scss
@@ -189,6 +189,6 @@ form.registration_form{
         float: left;
     }
     .payment_details{
-        width: 644px;
+        width: 675px;
     }
 }
